# extgange-betfair-mcp

./: .env.example  .gitignore  HOME_PC_SETUP.md  LICENSE  README.md  RESEARCH_INDEX.md  pyproject.toml
src/betfair_mcp/: __init__.py  auth.py  error_handling.py  formatters.py  models.py  rate_limiter.py  server.py  weight_calculator.py
src/betfair_mcp/tools/: __init__.py  account.py  events.py  markets.py
src/betfair_mcp/utils/: __init__.py
